2005-04-16  Benhur Stein <benhur@inf.ufsm.br>
	* ContainerFilter/ContainerSelector.m,
	  EntityTypeFilter/EntityTypeSelector.m, General/HierarchyBrowser.m,
	  General/MultiEnumerator.m, General/PajeType.m, General/TimeList.m,
	  Paje/PajeController.m, ReductionFilter/BusyNode.m, 
	  PajeSimulator/PajeSimul+Events.m: small code reorganization;
	  changed NSLog's into NSDebugLog's or NSWarnLog's

2005-01-23 (1.3.2) Vincent Danjean <Vincent.Danjean@ens-lyon.org>
	* New official release 

2005-03-26  Benhur Stein <benhur@inf.ufsm.br>
	* SpaceTimeViewer/STEntityTypeLayoutController.[hm],
	  STEntityTypeLayout.gorm: changed names of instance variables to
	  better reflect their use. Corrected a bug that was preventing the
	  edition of layout data in some cases (an invisible view over
	  the others). Should create separate editor classes for each
	  drawing type for this to be easily changed.

2005-03-16  Benhur Stein <benhur@inf.ufsm.br>
	* Traces: added directory
	* Traces/JavaTest.trace: small trace example added

2005-03-06  Benhur Stein <benhur@inf.ufsm.br>
	* EntityTypeFilter/EntityTypeSelector.m, ImbricationFilter/InsetLimit.m,
	  OrderFilter/Order.m, ReductionFilter/BusyNode.m,
	  Paje/PajeController.[hm], Paje/PajeTraceController.m: implemented
	  support for saving/loading filter configuration. Configuration is
	  saved/loaded for file /tmp/pajeconfig. Missing FieldFilter, the
	  possibility of naming configurations, a configuration editor (loading
	  and unloading of filters, more than one filter of the same type, etc.
	* General/PajeFilter.[hm]: added helper methods -entityTypeWithName:
	  and -containerWithName:type:
	* General/HierarchyBrowser.m: some better support for when updating 
	  last column (still does not work in all cases)
	* ImbricationFilter/InsetLimit.[hm]: added a cache for increased
	  performance (not measured)

2005-02-21  Benhur Stein <benhur@inf.ufsm.br>
	* General/PajeFilter.h: add some documentation.
